--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -17,7 +17,7 @@
 <resources>
     <!-- Colors for the dialpad -->
     <color name="dialer_theme_color">#606060</color>
-    <color name="dialer_theme_color_dark">#606060</color>
+    <color name="dialer_theme_color_dark">#4d4d4d</color>
     <color name="background_dialpad">@*android:color/material_grey_850</color>
     <color name="background_dialpad_pressed">#ffececec</color>
     <color name="dialpad_primary_text_color">#b3ffffff</color>
